--- a/index.html
+++ b/index.html
@@ -6,7 +6,23 @@
   <link rel="stylesheet" href="playlist.css">
 </head>
 <body>
-
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLC88cLhd1Qkmt3quxO8COJzyKW7ZRMQa8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+  <div class="grid-container">
+    <div class="playlist-container ">
+      <input class="input-password" placeholder="Password" type="password">
+      <button class="submit-button">Submit</button>
+      <h1 class="none">Playlist-Naše</h1>
+    <iframe class="none" src="https://www.youtube.com/embed/videoseries?list=PLC88cLhd1Qkmt3quxO8COJzyKW7ZRMQa8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+    </iframe>
+    </div>
+ 
+    <div class="playlist-container">
+      
+  <!--  <h1>Playlist</h1>
+      <iframe src="https://www.youtube.com/embed/videoseries?list=PLC88cLhd1Qkmt3quxO8COJzyKW7ZRMQa8" title="YouTube video player"    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen>
+      </iframe>
+      </div>
+  -->
+  </div>
+  <script src="playlist.js"></script>
 </body>
 </html>
